Chnage theme Pro to Rooh

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,5 @@
-# MongoDB Configuration
-MONGO_URI=your_mongodb_uri_here
-
-# Flask Configuration
-SECRET_KEY=your_secret_key_here
-
-# Default Admin Configuration
-DEFAULT_ADMIN_USERNAME=ImranSaab
-DEFAULT_ADMIN_PASSWORD=your_password_here
-DEFAULT_ADMIN_NAME=Imran Khan
+MONGO_URI=""
+SECRET_KEY=""
+GMAIL_USER=
+GMAIL_APP_PASSWORD=
+PASSWORD_RESET_EXPIRY_MINUTES=30
